Research JDK 26 JVM follow-up